--- a/master_thesis/references.bib
+++ b/master_thesis/references.bib
@@ -210,3 +210,310 @@
 	annote = {Publication Information: SEE parent document record, "Studying Turbulence Using Numerical Simulation Databases - IX: Proceedings of the 2002 Summer Program"; p. 155-167},
 	file = {NASA NTRS Full Text PDF:C\:\\Users\\gaura\\Zotero\\storage\\MJ2P3S9V\\Collis - 2002 - Discontinuous Galerkin Methods for Turbulence Simu.pdf:application/pdf;Snapshot:C\:\\Users\\gaura\\Zotero\\storage\\W888M8UH\\search.html:text/html}
 }
+
+@article{busch_discontinuous_2011,
+	title = {Discontinuous {Galerkin} methods in nanophotonics},
+	volume = {5},
+	issn = {1863-8880},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/lpor.201000045},
+	doi = {10.1002/lpor.201000045},
+	abstract = {Abstract This article reviews the state of the recently developed discontinuous Galerkin finite element method for the efficient numerical treatment of nanophotonic systems. This approach combines the accurate and flexible spatial discretisation of classical finite elements with efficient time stepping capabilities. We describe in detail the underlying principles of the discontinuous Galerkin technique and its application to the simulation of complex nanophotonic structures. In addition, formulations for both time- and frequency-domain solvers are provided and specific advantages and limitations of the technique are discussed. The potential of the discontinuous Galerkin approach is illustrated by modelling and simulating several experimentally relevant systems.},
+	number = {6},
+	urldate = {2019-03-05},
+	journal = {Laser \& Photonics Reviews},
+	author = {Busch, K. and König, M. and Niegemann, J.},
+	month = nov,
+	year = {2011},
+	keywords = {discontinuous Galerkin methods., frequency-domain simulations, light-matter interaction, Maxwell's equations, Nanophotonics, plasmonics, time-domain simulations},
+	pages = {773--809},
+	file = {Full Text PDF:C\:\\Users\\gaura\\Zotero\\storage\\V2EJ7HXL\\Busch et al. - 2011 - Discontinuous Galerkin methods in nanophotonics.pdf:application/pdf;Snapshot:C\:\\Users\\gaura\\Zotero\\storage\\NQCHJC7L\\lpor.html:text/html}
+}
+
+
+@article{shu_total-variation-diminishing_1988,
+	title = {Total-{Variation}-{Diminishing} {Time} {Discretizations}},
+	volume = {9},
+	issn = {0196-5204},
+	url = {https://doi.org/10.1137/0909073},
+	doi = {10.1137/0909073},
+	abstract = {In the computation of conservation laws \$u\_t + f(u)\_x = 0\$, total-variation-diminishing (TVD) schemes have been very successful. Many TVD schemes are of method-of-lines form (i.e., discretized in spatial variables only); hence time discretizations that keep TVD and have other properties (e.g., large CFL numbers for steady state calculations, or high-order accuracy for time-dependent problems) are desirable. In this paper we present a class of m-step Runge–Kutta-type TVD time discretizations with large CFL number m, suitable for steady state calculations, and a class of multilevel type TVD high-order time discretizations suitable for time-dependent problems. Some preliminary numerical results are also given.},
+	number = {6},
+	urldate = {2019-03-06},
+	journal = {SIAM J. Sci. Stat. Comput.},
+	author = {Shu, Chi-Wang},
+	month = nov,
+	year = {1988},
+	keywords = {35L65, 65M05, 65M10, conservation law, time discretization, TVD scheme},
+	pages = {1073--1084}
+}
+
+
+@techreport{reed_triangular_1973,
+	title = {Triangular mesh methods for the neutron transport equation},
+	url = {https://www.osti.gov/biblio/4491151-triangular-mesh-methods-neutron-transport-equation},
+	abstract = {The U.S. Department of Energy's Office of Scientific and Technical Information},
+	language = {English},
+	number = {LA-UR-73-479; CONF-730414-2},
+	urldate = {2019-03-11},
+	institution = {Los Alamos Scientific Lab., N.Mex. (USA)},
+	author = {Reed, W. H. and Hill, T. R.},
+	month = oct,
+	year = {1973},
+	file = {Full Text PDF:C\:\\Users\\gaura\\Zotero\\storage\\K68LXT8P\\Reed and Hill - 1973 - Triangular mesh methods for the neutron transport .pdf:application/pdf;Snapshot:C\:\\Users\\gaura\\Zotero\\storage\\63HYGVA9\\4491151-triangular-mesh-methods-neutron-transport-equation.html:text/html}
+}
+
+
+@article{atkins_quadrature-free_1998,
+	title = {Quadrature-{Free} {Implementation} of {Discontinuous} {Galerkin} {Method} for {Hyperbolic} {Equations}},
+	volume = {36},
+	issn = {0001-1452},
+	url = {https://arc.aiaa.org/doi/10.2514/2.436},
+	doi = {10.2514/2.436},
+	number = {5},
+	urldate = {2019-03-11},
+	journal = {AIAA Journal},
+	author = {Atkins, Harold L. and Shu, Chi-Wang},
+	month = may,
+	year = {1998},
+	pages = {775--782},
+	file = {Full Text PDF:C\:\\Users\\gaura\\Zotero\\storage\\ZY2JPRTD\\Atkins and Shu - 1998 - Quadrature-Free Implementation of Discontinuous Ga.pdf:application/pdf;Snapshot:C\:\\Users\\gaura\\Zotero\\storage\\YWUUCXV6\\2.html:text/html}
+}
+
+@article{toulopoulos_high-order_2006,
+	title = {High-{Order} {Discontinuous} {Galerkin} {Discretizations} for {Computational} {Aeroacoustics} in {Complex} {Domains}},
+	volume = {44},
+	issn = {0001-1452},
+	url = {https://arc.aiaa.org/doi/10.2514/1.11422},
+	doi = {10.2514/1.11422},
+	number = {3},
+	urldate = {2019-03-11},
+	journal = {AIAA Journal},
+	author = {Toulopoulos, Ioannis and Ekaterinaris, John A.},
+	month = mar,
+	year = {2006},
+	pages = {502--511},
+	file = {Full Text PDF:C\:\\Users\\gaura\\Zotero\\storage\\9SMVUB2B\\Toulopoulos and Ekaterinaris - 2006 - High-Order Discontinuous Galerkin Discretizations .pdf:application/pdf;Snapshot:C\:\\Users\\gaura\\Zotero\\storage\\M88D5UZR\\1.html:text/html}
+}
+
+
+@article{dumbser_arbitrary_2006,
+	title = {An arbitrary high-order discontinuous {Galerkin} method for elastic waves on unstructured meshes – {II}. {The} three-dimensional isotropic case},
+	volume = {167},
+	issn = {1365-246X},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-246X.2006.03120.x},
+	doi = {10.1111/j.1365-246X.2006.03120.x},
+	abstract = {We present a new numerical method to solve the heterogeneous elastic wave equations formulated as a linear hyperbolic system using first-order derivatives with arbitrary high-order accuracy in space and time on 3-D unstructured tetrahedral meshes. The method combines the Discontinuous Galerkin (DG) Finite Element (FE) method with the ADER approach using Arbitrary high-order DERivatives for flux calculation. In the DG framework, in contrast to classical FE methods, the numerical solution is approximated by piecewise polynomials which allow for discontinuities at element interfaces. Therefore, the well-established theory of numerical fluxes across element interfaces obtained by the solution of Riemann-Problems can be applied as in the finite volume framework. To define a suitable flux over the element surfaces, we solve so-called Generalized Riemann-Problems (GRP) at the element interfaces. The GRP solution provides simultaneously a numerical flux function as well as a time-integration method. The main idea is a Taylor expansion in time in which all time-derivatives are replaced by space derivatives using the so-called Cauchy–Kovalewski or Lax–Wendroff procedure which makes extensive use of the governing PDE. The numerical solution can thus be advanced for one time step without intermediate stages as typical, for example, for classical Runge–Kutta time stepping schemes. Due to the ADER time-integration technique, the same approximation order in space and time is achieved automatically. Furthermore, the projection of the tetrahedral elements in physical space on to a canonical reference tetrahedron allows for an efficient implementation, as many computations of 3-D integrals can be carried out analytically beforehand. Based on a numerical convergence analysis, we demonstrate that the new schemes provide very high order accuracy even on unstructured tetrahedral meshes and computational cost and storage space for a desired accuracy can be reduced by higher-order schemes. Moreover, due to the choice of the basis functions for the piecewise polynomial approximation, the new ADER–DG method shows spectral convergence on tetrahedral meshes. An application of the new method to a well-acknowledged test case and comparisons with analytical and reference solutions, obtained by different well-established methods, confirm the performance of the proposed method. Therefore, the development of the highly accurate ADER–DG approach for tetrahedral meshes provides a numerical technique to approach 3-D wave propagation problems in complex geometry with unforeseen accuracy.},
+	language = {en},
+	number = {1},
+	urldate = {2019-03-11},
+	journal = {Geophysical Journal International},
+	author = {Dumbser, Michael and Käser, Martin},
+	year = {2006},
+	keywords = {Discontinuous Galerkin, elastic waves, high-order accuracy, tetrahedral meshes},
+	pages = {319--336},
+	file = {Full Text PDF:C\:\\Users\\gaura\\Zotero\\storage\\35UPULZ8\\Dumbser and Käser - 2006 - An arbitrary high-order discontinuous Galerkin met.pdf:application/pdf;Snapshot:C\:\\Users\\gaura\\Zotero\\storage\\53TU56YM\\j.1365-246X.2006.03120.html:text/html}
+}
+
+@article{kaser_arbitrary_2006,
+	title = {An arbitrary high-order discontinuous {Galerkin} method for elastic waves on unstructured meshes – {I}. {The} two-dimensional isotropic case with external source terms},
+	volume = {166},
+	issn = {1365-246X},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-246X.2006.03051.x},
+	doi = {10.1111/j.1365-246X.2006.03051.x},
+	abstract = {We present a new numerical approach to solve the elastic wave equation in heterogeneous media in the presence of externally given source terms with arbitrary high-order accuracy in space and time on unstructured triangular meshes. We combine a discontinuous Galerkin (DG) method with the ideas of the ADER time integration approach using Arbitrary high-order DERivatives. The time integration is performed via the so-called Cauchy-Kovalewski procedure using repeatedly the governing partial differential equation itself. In contrast to classical finite element methods we allow for discontinuities of the piecewise polynomial approximation of the solution at element interfaces. This way, we can use the well-established theory of fluxes across element interfaces based on the solution of Riemann problems as developed in the finite volume framework. In particular, we replace time derivatives in the Taylor expansion of the time integration procedure by space derivatives to obtain a numerical scheme of the same high order in space and time using only one single explicit step to evolve the solution from one time level to another. The method is specially suited for linear hyperbolic systems such as the heterogeneous elastic wave equations and allows an efficient implementation. We consider continuous sources in space and time and point sources characterized by a Delta distribution in space and some continuous source time function. Hereby, the method is able to deal with point sources at any position in the computational domain that does not necessarily need to coincide with a mesh point. Interpolation is automatically performed by evaluation of test functions at the source locations. The convergence analysis demonstrates that very high accuracy is retained even on strongly irregular meshes and by increasing the order of the ADER–DG schemes computational time and storage space can be reduced remarkably. Applications of the proposed method to Lamb's Problem, a problem of strong material heterogeneities and to an example of global seismic wave propagation finally confirm its accuracy, robustness and high flexibility.},
+	language = {en},
+	number = {2},
+	urldate = {2019-03-11},
+	journal = {Geophysical Journal International},
+	author = {Käser, Martin and Dumbser, Michael},
+	year = {2006},
+	keywords = {arbitrary high order, discontinuous Galerkin method, elastic waves, unstructured mesh},
+	pages = {855--877},
+	file = {Full Text PDF:C\:\\Users\\gaura\\Zotero\\storage\\28UMT28Z\\Käser and Dumbser - 2006 - An arbitrary high-order discontinuous Galerkin met.pdf:application/pdf;Snapshot:C\:\\Users\\gaura\\Zotero\\storage\\R3A4RAT9\\j.1365-246X.2006.03051.html:text/html}
+}
+
+@article{kaser_arbitrary_2007,
+	title = {An arbitrary high-order {Discontinuous} {Galerkin} method for elastic waves on unstructured meshes – {III}. {Viscoelastic} attenuation},
+	volume = {168},
+	issn = {1365-246X},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-246X.2006.03193.x},
+	doi = {10.1111/j.1365-246X.2006.03193.x},
+	abstract = {We present a new numerical method to solve the heterogeneous anelastic, seismic wave equations with arbitrary high order accuracy in space and time on 3-D unstructured tetrahedral meshes. Using the velocity–stress formulation provides a linear hyperbolic system of equations with source terms that is completed by additional equations for the anelastic functions including the strain history of the material. These additional equations result from the rheological model of the generalized Maxwell body and permit the incorporation of realistic attenuation properties of viscoelastic material accounting for the behaviour of elastic solids and viscous fluids. The proposed method combines the Discontinuous Galerkin (DG) finite element (FE) method with the ADER approach using Arbitrary high order DERivatives for flux calculations. The DG approach, in contrast to classical FE methods, uses a piecewise polynomial approximation of the numerical solution which allows for discontinuities at element interfaces. Therefore, the well-established theory of numerical fluxes across element interfaces obtained by the solution of Riemann problems can be applied as in the finite volume framework. The main idea of the ADER time integration approach is a Taylor expansion in time in which all time derivatives are replaced by space derivatives using the so-called Cauchy–Kovalewski procedure which makes extensive use of the governing PDE. Due to the ADER time integration technique the same approximation order in space and time is achieved automatically and the method is a one-step scheme advancing the solution for one time step without intermediate stages. To this end, we introduce a new unrolled recursive algorithm for efficiently computing the Cauchy–Kovalewski procedure by making use of the sparsity of the system matrices. The numerical convergence analysis demonstrates that the new schemes provide very high order accuracy even on unstructured tetrahedral meshes while computational cost and storage space for a desired accuracy can be reduced when applying higher degree approximation polynomials. In addition, we investigate the increase in computing time, when the number of relaxation mechanisms due to the generalized Maxwell body are increased. An application to a well-acknowledged test case and comparisons with analytic and reference solutions, obtained by different well-established numerical methods, confirm the performance of the proposed method. Therefore, the development of the highly accurate ADER–DG approach for tetrahedral meshes including viscoelastic material provides a novel, flexible and efficient numerical technique to approach 3-D wave propagation problems including realistic attenuation and complex geometry.},
+	language = {en},
+	number = {1},
+	urldate = {2019-03-11},
+	journal = {Geophysical Journal International},
+	author = {Käser, Martin and Dumbser, Michael and Puente, Josep De La and Igel, Heiner},
+	year = {2007},
+	keywords = {attenuation, Discontinuous Galerkin, high order accuracy, relaxation, unstructured meshes, viscoelasticity},
+	pages = {224--242},
+	file = {Full Text PDF:C\:\\Users\\gaura\\Zotero\\storage\\FLLXBJD5\\Käser et al. - 2007 - An arbitrary high-order Discontinuous Galerkin met.pdf:application/pdf;Snapshot:C\:\\Users\\gaura\\Zotero\\storage\\ZAD2LCFS\\j.1365-246X.2006.03193.html:text/html}
+}
+
+@article{cohen_discontinuous_2006,
+	series = {Electromagnetic modelling},
+	title = {Discontinuous {Galerkin} methods for {Maxwell}'s equations in the time domain},
+	volume = {7},
+	issn = {1631-0705},
+	url = {http://www.sciencedirect.com/science/article/pii/S1631070506000740},
+	doi = {10.1016/j.crhy.2006.03.004},
+	abstract = {In this article, we describe a new high-order Discontinuous Galerkin approach to Maxwell's equations in the time domain. This approach is based on hexahedral meshes and uses a mass-lumping technique. Thanks to the orthogonality of the basis functions and a judicious choice of the approximation spaces, it provides an efficient solver for these equations in terms of storage and CPU time. To cite this article: G. Cohen et al., C. R. Physique 7 (2006).
+Résumé
+Dans cet article on décrit une nouvelle approche Galerkin Discontinu d'ordre spatial élevé pour résoudre les équations de Maxwell dans le domaine temporel. Cette approche est basée sur un maillage formé d'hexahèdres et utilise une technique de compression de matrice de masse naturelle par l'utilisation de formule de quadrature de Gauss pour évaluer les termes intégraux dans la méthode. De plus, à cause de l'orthogonalité des fonctions de bases et de l'espace d'approximation choisis, on réduit aussi considérablement les matrices de rigidité et de saut, ce qui entraîne au final une méthode de résolution des équations de Maxwell en temporel, précise et efficace en termes de coûts mémoire et temps CPU. Pour citer cet article : G. Cohen et al., C. R. Physique 7 (2006).},
+	number = {5},
+	urldate = {2018-10-18},
+	journal = {Comptes Rendus Physique},
+	author = {Cohen, Gary and Ferrieres, Xavier and Pernet, Sébastien},
+	month = jun,
+	year = {2006},
+	keywords = {Centered scheme, Discontinuous Galerkin method, Équations de Maxwell dans le domaine temporel, Maxwell's equation in time domain, Méthode Galerkin discontinu, Numerical scheme for Maxwell's equations, Schéma centré, Schéma numériques pour les équations de Maxwell},
+	pages = {494--500},
+	file = {ScienceDirect Full Text PDF:C\:\\Users\\gaura\\Zotero\\storage\\T8QPIN89\\Cohen et al. - 2006 - Discontinuous Galerkin methods for Maxwell's equat.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\gaura\\Zotero\\storage\\YTLZP3DY\\S1631070506000740.html:text/html}
+}
+
+@inproceedings{grynko_application_2018,
+	title = {Application of the {Discontinuous} {Galerkin} {Time} {Domain} {Method} in {Nonlinear} {Nanoplasmonics}},
+	doi = {10.1109/MMET.2018.8460261},
+	abstract = {We describe an implementation of the Discontinuous Galerkin Time Domain (DGTD) method for massively parallel numerical simulations of the nonlinear optical response from metallic nanostructures. A Maxwell- Vlasov hydrodynamic model is used to account for the nonlinear effects in the motion of the free electrons in a metal. The model is applied to simulate the second-harmonic generation (SHG) from the golden gap nanoantennas with random surface rougness. The results show that surface defects break the symmetry of the structure and produce bright SHG hot spots on the surface of nanoantennas. This increases the far-field SHG intensity by orders of magnitude.},
+	booktitle = {2018 {IEEE} 17th {International} {Conference} on {Mathematical} {Methods} in {Electromagnetic} {Theory} ({MMET})},
+	author = {Grynko, Y. and Förstner, J.},
+	month = jul,
+	year = {2018},
+	keywords = {Galerkin method, Mathematical model, Maxwell equations, time-domain analysis, bright SHG hot spots, Discontinuous Galerkin Time Domain method, far-field SHG intensity, free electrons, Frequency conversion, golden gap nanoantennas, hydrodynamics, massively parallel numerical simulations, Maxwell-Vlasov hydrodynamic model, metallic nanostructures, nanophotonics, nanostructured materials, Nanostructures, nonlinear nanoplasmonics, nonlinear optical response, numerical analysis, Numerical models, optical harmonic generation, plasmonics, random surface rougness, Rough surfaces, second-harmonic generation, surface defects, Surface morphology, surface roughness, Surface roughness, Vlasov equation},
+	pages = {75--78},
+	file = {IEEE Xplore Abstract Record:C\:\\Users\\gaura\\Zotero\\storage\\2RVCD2NF\\8460261.html:text/html;IEEE Xplore Full Text PDF:C\:\\Users\\gaura\\Zotero\\storage\\GGU2P84A\\Grynko and Förstner - 2018 - Application of the Discontinuous Galerkin Time Dom.pdf:application/pdf}
+}
+
+@article{busch_discontinuous_2011,
+	title = {Discontinuous {Galerkin} methods in nanophotonics},
+	volume = {5},
+	issn = {1863-8880},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/lpor.201000045},
+	doi = {10.1002/lpor.201000045},
+	abstract = {Abstract This article reviews the state of the recently developed discontinuous Galerkin finite element method for the efficient numerical treatment of nanophotonic systems. This approach combines the accurate and flexible spatial discretisation of classical finite elements with efficient time stepping capabilities. We describe in detail the underlying principles of the discontinuous Galerkin technique and its application to the simulation of complex nanophotonic structures. In addition, formulations for both time- and frequency-domain solvers are provided and specific advantages and limitations of the technique are discussed. The potential of the discontinuous Galerkin approach is illustrated by modelling and simulating several experimentally relevant systems.},
+	number = {6},
+	urldate = {2019-03-05},
+	journal = {Laser \& Photonics Reviews},
+	author = {Busch, K. and König, M. and Niegemann, J.},
+	month = nov,
+	year = {2011},
+	keywords = {Maxwell's equations, plasmonics, discontinuous Galerkin methods., frequency-domain simulations, light-matter interaction, Nanophotonics, time-domain simulations},
+	pages = {773--809},
+	file = {Full Text PDF:C\:\\Users\\gaura\\Zotero\\storage\\V2EJ7HXL\\Busch et al. - 2011 - Discontinuous Galerkin methods in nanophotonics.pdf:application/pdf;Snapshot:C\:\\Users\\gaura\\Zotero\\storage\\NQCHJC7L\\lpor.html:text/html}
+}
+
+@article{cohen_spatial_2006,
+	title = {A spatial high-order hexahedral discontinuous {Galerkin} method to solve {Maxwell}’s equations in time domain},
+	volume = {217},
+	issn = {0021-9991},
+	url = {http://www.sciencedirect.com/science/article/pii/S0021999106000131},
+	doi = {10.1016/j.jcp.2006.01.004},
+	abstract = {In this paper, we present a non-dissipative spatial high-order discontinuous Galerkin method to solve the Maxwell equations in the time domain. The non-intuitive choice of the space of approximation and the basis functions induce an important gain for mass, stiffness and jump matrices in terms of memory. This spatial approximation, combined with a leapfrog scheme in time, leads also to a fast explicit and accurate method. A study of the dispersive error is carried out and a stability condition for the proposed scheme is established. Some comparisons with other schemes are presented to validate the new scheme and to point out its advantages. Finally, in order to improve the efficiency of the method in terms of CPU time on general unstructured meshes, a strategy of local time-stepping is proposed.},
+	number = {2},
+	urldate = {2019-03-11},
+	journal = {Journal of Computational Physics},
+	author = {Cohen, G. and Ferrieres, X. and Pernet, S.},
+	month = sep,
+	year = {2006},
+	keywords = {Conservative spatial centered scheme, Discontinuous Galerkin methods, Dispersive error, Local time step, Maxwell’s equations in time domain, Numerical methods, Stability analysis},
+	pages = {340--363},
+	file = {ScienceDirect Full Text PDF:C\:\\Users\\gaura\\Zotero\\storage\\LL8TYUIV\\Cohen et al. - 2006 - A spatial high-order hexahedral discontinuous Gale.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\gaura\\Zotero\\storage\\6I4QYT2Y\\S0021999106000131.html:text/html}
+}
+
+@article{cockburn_locally_2004,
+	title = {Locally divergence-free discontinuous {Galerkin} methods for the {Maxwell} equations},
+	volume = {194},
+	issn = {0021-9991},
+	url = {http://www.sciencedirect.com/science/article/pii/S0021999103004960},
+	doi = {10.1016/j.jcp.2003.09.007},
+	abstract = {In this paper, we develop the locally divergence-free discontinuous Galerkin method for numerically solving the Maxwell equations. The distinctive feature of the method is the use of approximate solutions that are exactly divergence-free inside each element. As a consequence, this method has a smaller computational cost than that of the discontinuous Galerkin method with standard piecewise polynomial spaces. We show that, in spite of this fact, it produces approximations of the same accuracy. We also show that this method is more efficient than the discontinuous Galerkin method using globally divergence-free piecewise polynomial bases. Finally, a post-processing technique is used to recover (2k+1)th order of accuracy when piecewise polynomials of degree k are used.},
+	number = {2},
+	urldate = {2019-03-11},
+	journal = {Journal of Computational Physics},
+	author = {Cockburn, Bernardo and Li, Fengyan and Shu, Chi-Wang},
+	month = mar,
+	year = {2004},
+	keywords = {Discontinuous Galerkin method, Divergence-free solutions, Maxwell equations},
+	pages = {588--610},
+	file = {ScienceDirect Full Text PDF:C\:\\Users\\gaura\\Zotero\\storage\\U9XEI6CU\\Cockburn et al. - 2004 - Locally divergence-free discontinuous Galerkin met.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\gaura\\Zotero\\storage\\J8JQX9JX\\S0021999103004960.html:text/html}
+}
+
+@article{konig_discontinuous_2010,
+	series = {Tacona {Photonics} 2009},
+	title = {The {Discontinuous} {Galerkin} {Time}-{Domain} method for {Maxwell}’s equations with anisotropic materials},
+	volume = {8},
+	issn = {1569-4410},
+	url = {http://www.sciencedirect.com/science/article/pii/S1569441010000246},
+	doi = {10.1016/j.photonics.2010.04.001},
+	abstract = {The Discontinuous Galerkin method is an accurate and efficient way to numerically solve the time-dependent Maxwell equations. In this paper, we extend the basic, two-dimensional formulation for isotropic materials to allow anisotropic permittivity tensors. Using a reference system with an analytical solution, we demonstrate that our extensions do not alter the superior convergence characteristics of the fundamental algorithm. We further apply our method to cylindrical invisibility cloaks to investigate the performance which can be achieved in experiments.},
+	number = {4},
+	urldate = {2019-03-11},
+	journal = {Photonics and Nanostructures - Fundamentals and Applications},
+	author = {König, Michael and Busch, Kurt and Niegemann, Jens},
+	month = sep,
+	year = {2010},
+	keywords = {Anisotropic materials, Discontinuous Galerkin method, Maxwell’s equations, Time-domain},
+	pages = {303--309},
+	file = {ScienceDirect Snapshot:C\:\\Users\\gaura\\Zotero\\storage\\S69UHYZF\\S1569441010000246.html:text/html}
+}
+
+
+@article{bernacki_parallel_2006,
+	series = {Parallel and distributed computing for computational mechanics},
+	title = {Parallel discontinuous {Galerkin} unstructured mesh solvers for the calculation of three-dimensional wave propagation problems},
+	volume = {30},
+	issn = {0307-904X},
+	url = {http://www.sciencedirect.com/science/article/pii/S0307904X0500212X},
+	doi = {10.1016/j.apm.2005.06.015},
+	abstract = {We discuss the parallel performances of discontinuous Galerkin solvers designed on unstructured tetrahedral meshes for the calculation of three-dimensional heterogeneous electromagnetic and aeroacoustic wave propagation problems. An explicit leap-frog time-scheme along with centered numerical fluxes are used in the proposed discontinuous Galerkin time-domain (DGTD) methods. The schemes introduced are genuinely non-dissipative, in order to achieve a discrete equivalent of the energy conservation. Parallelization of these schemes is based on a standard strategy that combines mesh partitioning and a message passing programming model. The resulting parallel solvers are applied and evaluated on several large-scale, homogeneous and heterogeneous, wave propagation problems.},
+	number = {8},
+	urldate = {2019-03-11},
+	journal = {Applied Mathematical Modelling},
+	author = {Bernacki, Marc and Fezoui, Loula and Lanteri, Stéphane and Piperno, Serge},
+	month = aug,
+	year = {2006},
+	keywords = {Aeroacoustics, Discontinuous Galerkin, Electromagnetics, Finite element, Parallel computing, SPMD, Tetrahedral mesh},
+	pages = {744--763},
+	file = {ScienceDirect Full Text PDF:C\:\\Users\\gaura\\Zotero\\storage\\9V8KXGYT\\Bernacki et al. - 2006 - Parallel discontinuous Galerkin unstructured mesh .pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\gaura\\Zotero\\storage\\A8KXMEMB\\S0307904X0500212X.html:text/html}
+}
+
+
+@inproceedings{abed_design_2012,
+	title = {Design and implementation of interfacing two {FPGAs}},
+	doi = {10.1109/INNOVATIONS.2012.6207777},
+	abstract = {As FPGA performance and capabilities have increased substantially in recent years, FPGA-based designs are employed to implement complex functions and designs. The objective of our work is to design an interface between two FPGAs using I/O interface available inside FPGAs for the purpose of reliable communication. The two FPGAs will be connected via RS-232 port, to transfer data from one FPGA to another and vice versa. Our goal is to get a simple and reliable connection when two FPGAs communicate. The data information is created using Random Number Generator. We implemented our design using two Altera FPGA boards, implemented in Verilog™ language. Dynamic simulations were performed to verify the correctness of transmitted data. We had proposed a dice game as an application to show how two FPGAs can send and receive data to each other in full duplex direction. The two players generate a random number using Linear Feedback Shift Register (LFSR) algorithm then send their number to each other using RS-232 cross cable. Finally, the values are compared and whoever gets the larger number wins the game.},
+	booktitle = {2012 {International} {Conference} on {Innovations} in {Information} {Technology} ({IIT})},
+	author = {Abed, S. and Mohd, B. J. and Alnaami, B. and Alouneh, S.},
+	month = mar,
+	year = {2012},
+	keywords = {field programmable gate arrays, Field programmable gate arrays, FPGA, logic design, Integrated circuit interconnections, Communication, data information, dice game, FPGA based designs, full duplex direction, Games, Hardware, I/O interface, LFSR, linear feedback shift register, peripheral interfaces, random number generation, random number generator, Receivers, reliable communication, RS-232 port, RS232, shift registers, Transmitters, Universal Serial Bus, Verilog™ language},
+	pages = {72--77},
+	file = {IEEE Xplore Abstract Record:C\:\\Users\\gaura\\Zotero\\storage\\TGS98APY\\6207777.html:text/html;IEEE Xplore Full Text PDF:C\:\\Users\\gaura\\Zotero\\storage\\RFWAHH82\\Abed et al. - 2012 - Design and implementation of interfacing two FPGAs.pdf:application/pdf}
+}
+
+@inproceedings{sheng_hpc_2017,
+	title = {{HPC} on {FPGA} clouds: 3D {FFTs} and implications for molecular dynamics},
+	shorttitle = {{HPC} on {FPGA} clouds},
+	doi = {10.23919/FPL.2017.8056853},
+	abstract = {The architecture of the Microsoft Catapult II cloud places the accelerator (FPGA) as a bump-in-the-wire on the way to the network and thus promises a dramatic reduction in latency as layers of hardware and software are avoided. We demonstrate this capability with an implementation of the 3D FFT. Next we examine phased application elasticity, i.e., the use of a reduced set of nodes for some phases of an HPC application. We find that, for the FFT phase within Molecular Dynamics, such contraction is beneficial with a 13\%-14\% performance improvement. Turning to MD, we show how this elasticity can be integrated into the existing data transformation to hide its communication overhead and increase the performance benefit to 16\%-29\%.},
+	booktitle = {2017 27th {International} {Conference} on {Field} {Programmable} {Logic} and {Applications} ({FPL})},
+	author = {Sheng, J. and Yang, C. and Sanaullah, A. and Papamichael, M. and Caulfield, A. and Herbordt, M. C.},
+	month = sep,
+	year = {2017},
+	keywords = {3D FFT, Bandwidth, bump-in-the-wire, Computer architecture, fast Fourier transforms, FFT phase, field programmable gate arrays, Field programmable gate arrays, FPGA Acceleration, FPGA clouds, high performance computing, HPC application, IP networks, Microsoft Catapult II cloud, molecular biophysics, molecular dynamics, Molecular Dynamics, parallel processing, physics computing, Random access memory, Routing, Three-dimensional displays},
+	pages = {1--4},
+	file = {IEEE Xplore Abstract Record:C\:\\Users\\gaura\\Zotero\\storage\\HK2DREEY\\8056853.html:text/html;IEEE Xplore Full Text PDF:C\:\\Users\\gaura\\Zotero\\storage\\JUSH4GCW\\Sheng et al. - 2017 - HPC on FPGA clouds 3D FFTs and implications for m.pdf:application/pdf}
+}
+
+@inproceedings{sheng_design_2014,
+	title = {Design of 3D {FFTs} with {FPGA} clusters},
+	doi = {10.1109/HPEC.2014.7040997},
+	abstract = {The three dimensional Fast Fourier Transform (3D FFT) is widely applied in various scientific applications. Distributed 3D FFTs require global communication: this becomes a serious concern when strong scaling is required as in long timescale molecular dynamics simulations. In this paper, we propose a parameterized 3D FFT design that targets at a 3D-torus FPGA-based network of various sizes. Characteristics include direct FPGA-FPGA communication links, support for various internal switch designs, and use of table-based routing which saves chip area and routing cycles. We find that even assuming extremely conservative parameters, we are able to run the 163FFT in 3.9μs, 323FFT in 5.46μs, 643FFT in 9.52μs, and 1283FFT in 25.72μs. These results indicate that clusters based on commodity FPGAs are likely to be appropriate when strong scaling is needed in applications limited by the 3D FFT.},
+	booktitle = {2014 {IEEE} {High} {Performance} {Extreme} {Computing} {Conference} ({HPEC})},
+	author = {Sheng, J. and Humphries, B. and Zhang, H. and Herbordt, M. C.},
+	month = sep,
+	year = {2014},
+	keywords = {3D FFT, 3D-torus FPGA-based network, chip area, direct FPGA-FPGA communication link, distributed 3D FFT, fast Fourier transform, fast Fourier transforms, field programmable gate arrays, Field programmable gate arrays, FPGA, FPGA cluster, High Performance Computing, Indexes, internal switch design, IP networks, logic design, Low-Latency Communication, Ports (Computers), Routing, routing cycle, Switches, table-based routing, three dimensional FFT, Three-dimensional displays},
+	pages = {1--6},
+	file = {IEEE Xplore Abstract Record:C\:\\Users\\gaura\\Zotero\\storage\\JQH48A3P\\7040997.html:text/html;IEEE Xplore Full Text PDF:C\:\\Users\\gaura\\Zotero\\storage\\MFSGWBMV\\Sheng et al. - 2014 - Design of 3D FFTs with FPGA clusters.pdf:application/pdf}
+}
