Add topologies chapter with details of topology proposed
Signed-off-by: Gaurav Kumar Singh <gauravks@mail.uni-paderborn.de>

--- a/master_thesis/main.tex
+++ b/master_thesis/main.tex
@@ -62,6 +62,7 @@ to an accelerator for the Discontinuous Galerkin method}
 
 \include{chapters/introduction}
 \include{chapters/fundamental}
+\include{chapters/topologies}
 \include{chapters/arch}
 \include{chapters/evaluation}
 \include{chapters/conclusion}
