--- a/master_thesis/references.bib
+++ b/master_thesis/references.bib
@@ -517,3 +517,19 @@ Dans cet article on décrit une nouvelle approche Galerkin Discontinu d'ordre sp
 	pages = {1--6},
 	file = {IEEE Xplore Abstract Record:C\:\\Users\\gaura\\Zotero\\storage\\JQH48A3P\\7040997.html:text/html;IEEE Xplore Full Text PDF:C\:\\Users\\gaura\\Zotero\\storage\\MFSGWBMV\\Sheng et al. - 2014 - Design of 3D FFTs with FPGA clusters.pdf:application/pdf}
 }
+
+@article{robertazzi_toroidal_1988,
+	title = {Toroidal networks},
+	volume = {26},
+	issn = {0163-6804},
+	doi = {10.1109/35.459},
+	abstract = {The essential features of the toroidal network topology are examined, and its performance is evaluated. Some of the proposed applications of toroidal networks are described. Included in the discussion are metropolitan area network communication and multiprocessor interconnection, as well as the use of VLSI technology.{\textless}{\textless}ETX{\textgreater}{\textgreater}},
+	number = {6},
+	journal = {IEEE Communications Magazine},
+	author = {Robertazzi, T. G.},
+	month = jun,
+	year = {1988},
+	keywords = {Circuits, computer networks, Computer networks, Joining processes, metropolitan area network communication, Metropolitan area networks, multiprocessor interconnection, multiprocessor interconnection networks, Multiprocessor interconnection networks, network topology, Network topology, Routing, Surface fitting, toroidal network topology, Very large scale integration, Visualization, VLSI, VLSI technology},
+	pages = {45--50},
+	file = {IEEE Xplore Abstract Record:C\:\\Users\\gaura\\Zotero\\storage\\Z7EJSZTE\\459.html:text/html;IEEE Xplore Full Text PDF:C\:\\Users\\gaura\\Zotero\\storage\\DM2HG3M9\\Robertazzi - 1988 - Toroidal networks.pdf:application/pdf}
+}
