--- a/master_thesis/front/abbreviations.tex
+++ b/master_thesis/front/abbreviations.tex
@@ -10,3 +10,4 @@
 \acrodef{PCIe}{peripheral component interconnect express}
 \acrodef{QSFP}{Quad Small Form-factor Pluggable}
 \acrodef{HDL}{Hardware Description Language}
+\acrodef{LSU}{Load store unit}
