--- a/master_thesis/hgblistings.sty
+++ b/master_thesis/hgblistings.sty
@@ -22,7 +22,7 @@ identifierstyle=,%\sffamily, %\bfseries
 commentstyle=\normalfont\itshape,%
 stringstyle=\ttfamily,%
 showstringspaces=false,%
-columns = flexible,% fixed, 
+columns = flexible,% fixed,
 breaklines=true,%
 tabsize=2, %
 backgroundcolor=\color{ListingsBackgroundColor},
@@ -131,8 +131,8 @@ keepspaces=true,%
 
 % Language Definition and Code Environment for JavaScript
 \lstdefinelanguage{JavaScript}
-{	keywords={attributes, class, classend, do, empty, endif, endwhile, fail, function,% 
-		functionend, if, implements, in, inherit, inout, not, of, operations, out,% 
+{	keywords={attributes, class, classend, do, empty, endif, endwhile, fail, function,%
+		functionend, if, implements, in, inherit, inout, not, of, operations, out,%
 		return, set, then, types, while, use},
 	sensitive=false,
 	morecomment=[l]{//},
@@ -203,6 +203,46 @@ keepspaces=true,%
 	#1}}%
 {}
 
+\colorlet{punct}{red!60!black}
+\definecolor{background}{HTML}{EEEEEE}
+\definecolor{delim}{RGB}{20,105,176}
+\colorlet{numb}{magenta!60!black}
+\lstdefinelanguage{json}{
+    basicstyle=\normalfont\ttfamily,
+    numbers=left,
+    numberstyle=\scriptsize,
+    stepnumber=1,
+    numbersep=8pt,
+    showstringspaces=false,
+    breaklines=true,
+    frame=lines,
+    backgroundcolor=\color{background},
+    literate=
+     *{0}{{{\color{numb}0}}}{1}
+      {1}{{{\color{numb}1}}}{1}
+      {2}{{{\color{numb}2}}}{1}
+      {3}{{{\color{numb}3}}}{1}
+      {4}{{{\color{numb}4}}}{1}
+      {5}{{{\color{numb}5}}}{1}
+      {6}{{{\color{numb}6}}}{1}
+      {7}{{{\color{numb}7}}}{1}
+      {8}{{{\color{numb}8}}}{1}
+      {9}{{{\color{numb}9}}}{1}
+      {:}{{{\color{punct}{:}}}}{1}
+      {,}{{{\color{punct}{,}}}}{1}
+      {\{}{{{\color{delim}{\{}}}}{1}
+      {\}}{{{\color{delim}{\}}}}}{1}
+      {[}{{{\color{delim}{[}}}}{1}
+      {]}{{{\color{delim}{]}}}}{1},
+}
+% Code Environment for JSON
+\lstnewenvironment{JsonCode}[1][]
+{\lstset{%
+	language=json,
+	escapeinside={/+}{+/}, % makes "/+" and "+/" available for Latex escapes (labels etc.)
+	#1}}%
+{}
+
 
 % Disable the lstlisting environment (due to popular abuse)
 \newcommand{\@WarnLstlisting}{
@@ -210,7 +250,7 @@ keepspaces=true,%
 {See the error note inserted in the document output for details.}{}%
 \begin{quote}
 \color{red}\textbf{NOTE:} The \texttt{lstlisting} environment has been deliberately disabled in this setup.
-Use \emph{inline code} (breakable and \emph{without} a caption) or create a \emph{float container} with 
+Use \emph{inline code} (breakable and \emph{without} a caption) or create a \emph{float container} with
 \texttt{{\textbackslash}begin\{program\} \ldots {\textbackslash}end\{program\}} instead!
 See the \texttt{hgbthesis} tutorial for examples.
 \end{quote}%
