add details of final design

--- a/master_thesis/front/abbreviations.tex
+++ b/master_thesis/front/abbreviations.tex
@@ -11,3 +11,4 @@
 \acrodef{QSFP}{Quad Small Form-factor Pluggable}
 \acrodef{HDL}{Hardware Description Language}
 \acrodef{LSU}{Load store unit}
+\acrodef{II}{Initialization interval}
