--- a/master_thesis/front/abbreviations.tex
+++ b/master_thesis/front/abbreviations.tex
@@ -12,3 +12,4 @@
 \acrodef{HDL}{Hardware Description Language}
 \acrodef{LSU}{Load store unit}
 \acrodef{II}{Initialization interval}
+\acrodef{LCM}{Least Common Multiple}
