--- a/master_thesis/main.tex
+++ b/master_thesis/main.tex
@@ -22,6 +22,8 @@
 \usepackage[colorinlistoftodos]{todonotes}% marking open todos in text/on
 \newcommand{\TODO}[1]{\vspace{0.5em}\todo[inline, color=orange]{#1}}
 \newcommand{\FIXME}[1]{\vspace{0.5em}\todo[inline, color=red]{#1}}
+\usepackage{array}
+\newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 % \usepackage{mathrsfs}
 %%%----------------------------------------------------------
 % Title page entries
