add evaluation for topologies and plots

--- a/master_thesis/main.tex
+++ b/master_thesis/main.tex
@@ -24,6 +24,7 @@
 \newcommand{\FIXME}[1]{\vspace{0.5em}\todo[inline, color=red]{#1}}
 \usepackage{array}
 \newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
+\usepackage{multirow}
 % \usepackage{mathrsfs}
 %%%----------------------------------------------------------
 % Title page entries
@@ -94,6 +95,8 @@ to an accelerator for the Discontinuous Galerkin method}
 % \phantomsection
 \addcontentsline{toc}{chapter}{\listtablename}
 \listoftables
+
+\listoftodos
 
 %%%----------------------------------------------------------
 \MakeBibliography                        				% references
