add evaluation for execution runtime
Signed-off-by: Gaurav Kumar Singh <gauravks@mail.uni-paderborn.de>

--- a/master_thesis/data/runtine_normal.ipynb
+++ b/master_thesis/data/runtine_normal.ipynb
@@ -1001,7 +1001,9 @@
     "\n",
     "designs = [['mpi_N4', 'fc', '18_1'], ['mpi_N4', 'fc', '18_0']]\n",
     "\n",
-    "plot_comparison(designs)\n"
+    "plot_comparison(designs)\n",
+    "\n",
+    "\n"
    ]
   },
   {
