--- a/master_thesis/main.tex
+++ b/master_thesis/main.tex
@@ -25,6 +25,7 @@
 \usepackage{array}
 \newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \usepackage{multirow}
+\newcommand\mcc[1]{\multicolumn{1}{c|}{#1}}
 % \usepackage{mathrsfs}
 %%%----------------------------------------------------------
 % Title page entries
