--- a/master_thesis/references.bib
+++ b/master_thesis/references.bib
@@ -533,3 +533,16 @@ Dans cet article on décrit une nouvelle approche Galerkin Discontinu d'ordre sp
 	pages = {45--50},
 	file = {IEEE Xplore Abstract Record:C\:\\Users\\gaura\\Zotero\\storage\\Z7EJSZTE\\459.html:text/html;IEEE Xplore Full Text PDF:C\:\\Users\\gaura\\Zotero\\storage\\DM2HG3M9\\Robertazzi - 1988 - Toroidal networks.pdf:application/pdf}
 }
+
+@techreport{noauthor_intel_2019,
+	type = {Datasheet},
+	title = {Intel® {FPGA} {SDK} for {OpenCL}™ {Pro} {Edition} {Best} {Practices} {Guide}},
+	url = {https://www.intel.com/content/dam/www/programmable/us/en/pdfs/literature/hb/opencl-sdk/aocl-best-practices-guide.pdf},
+	language = {en},
+	number = {UG-OCL003},
+	institution = {Intel},
+	month = may,
+	year = {2019},
+	pages = {191},
+	file = {Intel® FPGA SDK for OpenCL™ Pro Edition Best Pract.pdf:C\:\\Users\\gaura\\Zotero\\storage\\63WJ82FC\\Intel® FPGA SDK for OpenCL™ Pro Edition Best Pract.pdf:application/pdf}
+}
