--- a/master_thesis/references.bib
+++ b/master_thesis/references.bib
@@ -546,3 +546,11 @@ Dans cet article on décrit une nouvelle approche Galerkin Discontinu d'ordre sp
 	pages = {191},
 	file = {Intel® FPGA SDK for OpenCL™ Pro Edition Best Pract.pdf:C\:\\Users\\gaura\\Zotero\\storage\\63WJ82FC\\Intel® FPGA SDK for OpenCL™ Pro Edition Best Pract.pdf:application/pdf}
 }
+
+
+@misc{forstner_discontinuous_nodate,
+	address = {Paderborn},
+	title = {Discontinuous {Galerkin} {Method}},
+	language = {Englisch},
+	author = {Förstner, Prof. Dr. Jens and Grynko, Yevgen and Alhaddad, Samer}
+}
