--- a/master_thesis/main.tex
+++ b/master_thesis/main.tex
@@ -26,6 +26,8 @@
 \newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \usepackage{multirow}
 \newcommand\mcc[1]{\multicolumn{1}{c|}{#1}}
+\widowpenalty10000
+\clubpenalty10000
 % \usepackage{mathrsfs}
 %%%----------------------------------------------------------
 % Title page entries
