intermediate after updating for comments
Signed-off-by: Gaurav Kumar Singh <gauravks@mail.uni-paderborn.de>

--- a/master_thesis/hgblistings.sty
+++ b/master_thesis/hgblistings.sty
@@ -208,7 +208,7 @@ keepspaces=true,%
 \definecolor{delim}{RGB}{20,105,176}
 \colorlet{numb}{magenta!60!black}
 \lstdefinelanguage{json}{
-    basicstyle=\normalfont\ttfamily,
+    basicstyle=\normalfont\ttfamily\footnotesize,
     numbers=left,
     numberstyle=\scriptsize,
     stepnumber=1,
