--- a/master_thesis/references.bib
+++ b/master_thesis/references.bib
@@ -120,15 +120,6 @@
       year = {2004},
       abstract = {We discuss the basic elements of the discontinuous  Galerkin methods for the time-domain Maxwell's equations. A  one-dimensional example is developed in detail from which  the extension to two- and three-dimensional algorithms are  minimal. A few examples are offered as well as guidelines  for extensions, generalizations, and helpful software  resources.},
 }
-@misc{noauthor_intel_2018,
-	title = {Intel® {FPGA} {SDK} for {OpenCL}™ {Pro} {Edition}  {Programming} {Guide}},
-	url = {https://www.intel.com/content/dam/www/programmable/us/en/pdfs/literature/hb/opencl-sdk/aocl_programming_guide.pdf},
-	language = {en},
-	publisher = {Intel},
-	month = sep,
-	year = {2018},
-	file = {Intel® FPGA SDK for OpenCL™ Pro Edition  Programmi.pdf:/home/gauravks/Zotero/storage/C4UM9AZC/Intel® FPGA SDK for OpenCL™ Pro Edition  Programmi.pdf:application/pdf}
-}
 
 @article{klockner_nodal_2009,
 	title = {Nodal discontinuous {Galerkin} methods on graphics processors},
@@ -534,7 +525,7 @@ Dans cet article on décrit une nouvelle approche Galerkin Discontinu d'ordre sp
 	file = {IEEE Xplore Abstract Record:C\:\\Users\\gaura\\Zotero\\storage\\Z7EJSZTE\\459.html:text/html;IEEE Xplore Full Text PDF:C\:\\Users\\gaura\\Zotero\\storage\\DM2HG3M9\\Robertazzi - 1988 - Toroidal networks.pdf:application/pdf}
 }
 
-@techreport{noauthor_intel_2019,
+@techreport{noauthor_intel_2019_best,
 	type = {Datasheet},
 	title = {Intel® {FPGA} {SDK} for {OpenCL}™ {Pro} {Edition} {Best} {Practices} {Guide}},
 	url = {https://www.intel.com/content/dam/www/programmable/us/en/pdfs/literature/hb/opencl-sdk/aocl-best-practices-guide.pdf},
@@ -547,6 +538,28 @@ Dans cet article on décrit une nouvelle approche Galerkin Discontinu d'ordre sp
 	file = {Intel® FPGA SDK for OpenCL™ Pro Edition Best Pract.pdf:C\:\\Users\\gaura\\Zotero\\storage\\63WJ82FC\\Intel® FPGA SDK for OpenCL™ Pro Edition Best Pract.pdf:application/pdf}
 }
 
+@techreport{noauthor_intel_2018,
+	type = {Datasheet},
+	title = {Intel® {FPGA} {SDK} for {OpenCL}™ {Pro} {Edition}  {Programming} {Guide}},
+	url = {https://www.intel.com/content/dam/www/programmable/us/en/pdfs/literature/hb/opencl-sdk/aocl_programming_guide.pdf},
+	language = {en},
+	institution = {Intel},
+	month = sep,
+	year = {2018},
+	file = {Intel® FPGA SDK for OpenCL™ Pro Edition  Programmi.pdf:C\:\\Users\\gaura\\Zotero\\storage\\C4UM9AZC\\Intel® FPGA SDK for OpenCL™ Pro Edition  Programmi.pdf:application/pdf}
+}
+
+@techreport{noauthor_intel_2019_prog,
+	type = {Datasheet},
+	title = {Intel® {FPGA} {SDK} for {OpenCL}™ {Pro} {Edition} {Programming} {Guide}},
+	language = {en},
+	number = {UG-OCL002},
+	institution = {Intel},
+	month = apr,
+	year = {2019},
+	pages = {212},
+	file = {Intel® FPGA SDK for OpenCL™ Pro Edition Programmin.pdf:C\:\\Users\\gaura\\Zotero\\storage\\MMG44DAB\\Intel® FPGA SDK for OpenCL™ Pro Edition Programmin.pdf:application/pdf}
+}
 
 @misc{forstner_discontinuous_nodate,
 	address = {Paderborn},
